bug with pizza wrapping tags fixed

--- a/src/style.scss
+++ b/src/style.scss
@@ -95,7 +95,7 @@ nav a {
   margin: 0;
 }
 .post-header h2 {
-  width: 80%;
+  width: 90%;
   text-align: center;
 }
 button {
